--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "ws": "^8.18.2"
   }
 }
